Closed Bug 1365184 Opened 7 years ago Closed 7 years ago

Assertion failure: !sRunningDispatcher || mAccessValid, at SchedulerGroup.h:58

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: cbook, Assigned: billm)

References

()

Details

(Keywords: assertion)

Attachments

(2 files)

Attached file bughunter stack
Found via bughunter and reproduced on latest m-c tinderbox trunk build on windows.

Steps to reproduce:
-> Load http://www.vib.com.vn
---> Assertion failure on load
maybe related to bug 1322184 ? Bill, Andreas could out take a look ?
Flags: needinfo?(wmccloskey)
Flags: needinfo?(afarre)
This is a dupe of bug 1364570.
Flags: needinfo?(wmccloskey)
Flags: needinfo?(afarre)
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → DUPLICATE
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
Attached patch patchSplinter Review
This is another case where the cycle collector collects a <link> element, and unbinding it removes a style sheet, which fires an event. We don't really care about the mismatch here since the document is dead anyway.

I added an extra flag to detect if we're cycle collecting. I was able to reproduce the problem and the patch fixes it.
Assignee: nobody → wmccloskey
Attachment #8869630 - Flags: review?(bugs)
Attachment #8869630 - Flags: review?(bugs) → review+
Pushed by wmccloskey@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/67c644768793
Fix docgroup mismatch during cycle collection (r=smaug)
https://hg.mozilla.org/mozilla-central/rev/67c644768793
Status: REOPENED → RESOLVED
Closed: 7 years ago7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Version: unspecified → Trunk
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: