Bug 1365184 - Fix docgroup mismatch during cycle collection (r=smaug)

MozReview-Commit-ID: Ld68RGU6lmB